--- a/src/components/Resume/Resume.module.scss
+++ b/src/components/Resume/Resume.module.scss
@@ -1,20 +1,18 @@
 .wrapper {
     width: 100%;
     display: grid;
-    grid-gap: 20px;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     height: 1120px;
-    padding: 20px;
     word-wrap: break-word;
 }
 
 .sidebar {
-    padding: 10px;
+    padding: 20px 10px 10px 20px;
     grid-column: 1 / 3;
 }
 
 .main {
-    padding: 10px;
+    padding: 20px 20px 10px 20px;
     grid-column: 3 / 7;
 }
 
@@ -25,6 +23,7 @@
 
 .image {
     border-radius: 50%;
+    max-height: 100px;
 }
 
 .text {
@@ -39,6 +38,7 @@
 .head {
     font-size: 30px;
     margin-bottom: 10px;
+    margin-top: 0;
 }
 
 .header {
