--- a/src/components/ResumeColors/ResumeColors.module.scss
+++ b/src/components/ResumeColors/ResumeColors.module.scss
@@ -2,6 +2,11 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 30px;
+
+    @media (max-width: 768px) {
+        grid-template-columns: 1fr;
+        gap: 20px;
+    }
 }
 
 .item {
