--- a/src/pages/PreviewPage/PreviewPage.module.scss
+++ b/src/pages/PreviewPage/PreviewPage.module.scss
@@ -28,10 +28,24 @@
     z-index: -1;
 }
 
+.whiteBackground {
+    background: #fff;
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -2;
+}
+
 .container {
     max-width: 1100px;
     padding: 0 15px;
     margin: 0 auto;
+
+    @media (max-width: 1100px) {
+        overflow: hidden;
+    }
 }
 
 .center {
